Refactor SSH setup and deployment via Cloudflare

--- a/.github/workflows/deploy_frontend.yml
+++ b/.github/workflows/deploy_frontend.yml
@@ -46,22 +46,37 @@ jobs:
       - name: Build
         run: npm run build
 
-      - name: Setup SSH
+      - name: Setup SSH agent
         uses: webfactory/ssh-agent@v0.9.0
         with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}   # github-deploy private key
 
-      - name: Add host key
+      - name: Install cloudflared
+        run: |
+          curl -L https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64 -o cloudflared
+          sudo mv cloudflared /usr/local/bin/cloudflared
+          sudo chmod +x /usr/local/bin/cloudflared
+
+      - name: Configure SSH for Cloudflare
         run: |
           mkdir -p ~/.ssh
-          ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+          cat << 'EOF' >> ~/.ssh/config
+Host vm-ssh
+  HostName ssh.yingliu.site
+  User sophia
+  ProxyCommand cloudflared access ssh --hostname %h
+EOF
+          chmod 600 ~/.ssh/config
+
+      # Optional: trust host key on first connect (you already did this locally)
+      - name: Test SSH via Cloudflare
+        run: |
+          ssh -o StrictHostKeyChecking=accept-new vm-ssh "echo 'SSH OK via Cloudflare'"
 
       - name: Deploy via rsync
         run: |
-          rsync -az --delete dist/ \
-            ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/var/www/frontend
+          rsync -az --delete dist/ vm-ssh:/var/www/frontend
 
       - name: Reload nginx
         run: |
-          ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} \
-            "sudo systemctl reload nginx"
+          ssh vm-ssh "sudo systemctl reload nginx"
