--- a/.github/workflows/deploy_frontend.yml
+++ b/.github/workflows/deploy_frontend.yml
@@ -1,4 +1,5 @@
 name: Deploy frontend
+
 on:
   workflow_dispatch:
     inputs:
@@ -24,11 +25,9 @@ jobs:
       (github.event_name == 'workflow_dispatch' &&
        inputs.force_deploy == 'true')
     runs-on: ubuntu-latest
-
     defaults:
       run:
         working-directory: frontend
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -45,6 +44,8 @@ jobs:
 
       - name: Build
         run: npm run build
+        env:
+          VITE_BACKEND_URL: ${{ secrets.VITE_BACKEND_URL }}
 
       - name: Setup SSH agent
         uses: webfactory/ssh-agent@v0.9.0
