--- a/.github/workflows/deploy_frontend.yml
+++ b/.github/workflows/deploy_frontend.yml
@@ -1,6 +1,11 @@
 name: Deploy frontend
-
 on:
+  workflow_dispatch:
+    inputs:
+      force_deploy:
+        description: 'Run deploy even without merged PR from develop'
+        required: false
+        default: 'false'
   pull_request:
     branches:
       - main
@@ -8,13 +13,16 @@ on:
       - closed
     paths:
       - 'frontend/**'
-      - '.github/workflows/deploy.yml'
+      - '.github/workflows/deploy_frontend.yml'
 
 jobs:
   deploy:
     if: >
-      github.event.pull_request.merged == true &&
-      github.event.pull_request.head.ref == 'develop'
+      (github.event_name == 'pull_request' &&
+       github.event.pull_request.merged == true &&
+       github.event.pull_request.head.ref == 'develop') ||
+      (github.event_name == 'workflow_dispatch' &&
+       inputs.force_deploy == 'true')
     runs-on: ubuntu-latest
 
     defaults:
@@ -33,29 +41,42 @@ jobs:
           node-version: 20
 
       - name: Install deps
-        run: npm ci
+        run: npm install
 
       - name: Build
         run: npm run build
         env:
           VITE_BACKEND_URL: ${{ secrets.VITE_BACKEND_URL }}
 
-      - name: Setup SSH
+      - name: Setup SSH agent
         uses: webfactory/ssh-agent@v0.9.0
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-      - name: Add host key
+      - name: Install cloudflared
+        run: |
+          curl -L https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64 -o cloudflared
+          sudo mv cloudflared /usr/local/bin/cloudflared
+          sudo chmod +x /usr/local/bin/cloudflared
+
+      - name: Configure SSH for Cloudflare
         run: |
           mkdir -p ~/.ssh
-          ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+          cat << 'EOF' >> ~/.ssh/config
+          Host vm-ssh
+            HostName ssh.yingliu.site
+            User sophia
+            ProxyCommand cloudflared access ssh --hostname %h
+          EOF
+          chmod 600 ~/.ssh/config
+
+      - name: Test SSH via Cloudflare
+        run: ssh -o StrictHostKeyChecking=accept-new vm-ssh "echo 'SSH OK via Cloudflare'"
 
       - name: Deploy via rsync
         run: |
-          rsync -az --delete dist/ \
-            ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/var/www/frontend
+          rsync -az --delete dist/ vm-ssh:/var/www/frontend
 
       - name: Reload nginx
         run: |
-          ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} \
-            "sudo systemctl reload nginx"
+          ssh vm-ssh "sudo systemctl reload nginx"
