chore: update .gitignore to include LLMprompt.md and set DEBUG to False in config.py

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,6 @@ backend/models/**/*.bin
 backend/models/**/*.ckpt
 backend/models/**/*.pb
 !backend/models/.gitkeep
+
+# ---- LLM prompt ----
+LLMprompt.md
