Change default force_deploy to true in workflow

--- a/.github/workflows/deploy_frontend.yml
+++ b/.github/workflows/deploy_frontend.yml
@@ -5,7 +5,7 @@ on:
       force_deploy:
         description: 'Run deploy even without merged PR from develop'
         required: false
-        default: 'false'
+        default: 'true'
   pull_request:
     branches:
       - main
