WIP:  mobile app development

--- a/.gitignore
+++ b/.gitignore
@@ -70,5 +70,26 @@ backend/models/**/*.ckpt
 backend/models/**/*.pb
 !backend/models/.gitkeep
 
+# ---- Flutter / Mobile App ----
+mobile_app/.dart_tool/
+mobile_app/.flutter-plugins
+mobile_app/.flutter-plugins-dependencies
+mobile_app/.packages
+mobile_app/build/
+mobile_app/ios/Pods/
+mobile_app/ios/Podfile.lock
+mobile_app/ios/.symlinks/
+mobile_app/ios/Flutter/Flutter.framework
+mobile_app/ios/Flutter/Flutter.podspec
+mobile_app/ios/Flutter/Generated.xcconfig
+mobile_app/ios/Flutter/app.flx
+mobile_app/ios/Flutter/flutter_assets/
+mobile_app/ios/Flutter/flutter_export_environment.sh
+mobile_app/ios/Runner/GeneratedPluginRegistrant.*
+mobile_app/ios/ServiceDefinitions.json
+mobile_app/pubspec.lock
+mobile_app/*.iml
+mobile_app/.idea/
+
 # ---- LLM prompt ----
 LLMprompt.md
