fix: configure SSH authentication for Cloudflare deployment
Set up SSH agent keys, host/pubkey algorithms, and secrets for backend deploy workflow.

--- a/.github/workflows/deploy_backend.yml
+++ b/.github/workflows/deploy_backend.yml
@@ -29,7 +29,10 @@ jobs:
       - name: Setup SSH agent
         uses: webfactory/ssh-agent@v0.9.0
         with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY_BACKEND }}
+      
+      - name: Debug - List keys in SSH agent
+        run: ssh-add -l
 
       - name: Install cloudflared
         run: |
@@ -41,14 +44,16 @@ jobs:
         run: |
           BACKEND_HOST="${{ inputs.backend_host || 'pose-backend-ssh.yingliu.site' }}"
           mkdir -p ~/.ssh
-          cat << EOF >> ~/.ssh/config
+          cat << 'EOF' >> ~/.ssh/config
           Host pose-backend
-            HostName $BACKEND_HOST
+            HostName pose-backend-ssh.yingliu.site
             User root
-            IdentitiesOnly yes
             ProxyCommand cloudflared access ssh --hostname %h
           EOF
           chmod 600 ~/.ssh/config
+
+      - name: Debug - Verify SSH config
+        run: cat ~/.ssh/config
 
       - name: Test SSH via Cloudflare
         run: ssh -o StrictHostKeyChecking=accept-new pose-backend "echo 'SSH OK via Cloudflare'"
