fix: SSH auth and container deploy for backend workflow
Configure SSH secrets, agent keys, and host algorithms for Cloudflare deployment. Fix pip --break-system-packages, container restart after killing PID 1, and docker exec SIGTERM handling.

--- a/.github/workflows/deploy_backend.yml
+++ b/.github/workflows/deploy_backend.yml
@@ -81,11 +81,12 @@ jobs:
             docker cp /tmp/backend-staging/. $CONTAINER:/root/backend/
 
             echo "=== Installing dependencies ==="
-            docker exec $CONTAINER bash -c "cd /root/backend && pip install -r requirements.txt -q"
+            docker exec $CONTAINER bash -c "cd /root/backend && pip install --break-system-packages -r requirements.txt -q"
 
             echo "=== Restarting app.py ==="
-            docker exec $CONTAINER bash -c "pkill -f 'python.*app.py' || true"
+            docker exec $CONTAINER bash -c "pkill -f 'python.*app.py'" || true
             sleep 2
+            docker start $CONTAINER 2>/dev/null || true
             docker exec -d $CONTAINER bash -c "cd /root/backend && mkdir -p logs && python app.py >> logs/app.log 2>&1"
 
             echo "=== Waiting for startup ==="
